# pybuildInfo

./: BUILD.md  MANIFEST.in  README.md  get_go_info  go.mod  go.sum  installGo.ps1  pyGoBuildInfo.go  pyGoBuildInfo.py  pyproject.toml  setup.cfg  setup.py  test_pyGoBuildInfo.py
.github/: dependabot.yml
.github/workflows/: build_wheels.yml
pygobuildinfo/: test_pyGoBuildInfo.py
pygobuildinfo/_pyinstaller/: __init__.py  hook-pygobuildinfo.py
src/pygobuildinfo/: __init__.py  pyGoBuildInfo.go  test_pyGoBuildInfo.py
