[metadata]
name = pygobuildinfo
version = 0.1.6
author = Mike Moore
author_email = z_z_zebra@yahoo.com
license = MIT
description = A utility to extract go build info information fro go executables and shared libraries
url = https://github.com/Mikemoore63/pybuildInfo
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = pygobuildinfo
zip_safe = False
setup_requires = setuptools-golang
scripts = get_go_info
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
pyinstaller40 =
  hook-dirs = pygobuildinfo._pyinstaller:get_hook_dirs
  tests     = pygobuildinfo._pyinstaller:get_PyInstaller_tests
