[metadata]
name = pygobuildinfo
version = 0.1.30
author = Mike Moore
author_email = z_z_zebra@yahoo.com
license = MIT
description = A utility to extract go build info information fro go executables and shared libraries
url = https://github.com/Mikemoore63/pybuildInfo
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
install_requires = pygorpmrustinfo>=0.1.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

